# ragtalk

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  params.toml  pyproject.toml
etc/: params_sample.toml  run.sh
examples/: make_qa_example.py  params_example.toml
src/ragtalk/: make_embeddings.py  memory.py  retriever.py  settings.py
src/ragtalk/app/: server.py
src/ragtalk/chains/: rag.py  rag_with_history.py
