[tool.poetry]
name = "rag-conversation"
version = "0.1.0"
description = "Conversational Chatbot with RAG."
authors = [
    "Luan Fernadnes <luangabriel70@gmail.com>",
]
readme = "README.md"
packages = [{include = "ragtalk", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.1"
openai = "<2"
tiktoken = ">=0.5.1"
black = "^24.2.0"
python-decouple = "^3.8"
langsmith = "^0.1.26"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.0.29"
pydantic = "<2"
langserve = {version = "^0.0.51", extras = ["server"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[tool.black]
line-length = 88

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"